<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>eu.oberon-oss</groupId>
        <artifactId>boms</artifactId>
        <version>3.25.3-SNAPSHOT</version>
    </parent>

    <artifactId>picocli-option-help</artifactId>
    <version>1.1.0-SNAPSHOT</version>

    <name>picocli-option-help</name>
    <description>Extended picocli help rendering for options with documented valid values.</description>
    <url>https://github.com/oberon-oss/picocli-option-help</url>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <organization>oberon-oss</organization>
        <lombok.version>1.18.46</lombok.version>
        <argLine></argLine>
        <sonar.organization>oberon-oss-eu</sonar.organization>
    </properties>

    <dependencies>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.32</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>central-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Oberon OSS</name>
        <url>https://github.com/${organization}</url>
    </organization>

    <developers>
        <developer>
            <id>TigerLilly64</id>
            <name>TigerLilly64</name>
            <email>info@oberon-oss.eu</email>
            <organization>Oberon OSS</organization>
            <organizationUrl>https://github.com/${organization}</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/${organization}/picocli-option-help.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/${organization}/picocli-option-help.git</developerConnection>
        <url>https://github.com/${organization}/picocli-option-help</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>central</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>@{argLine} --sun-misc-unsafe-memory-access=allow</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>


